# ViT-MNIST

./: .gitignore  CMakeLists.txt  main.cpp  test_transformer_block  test_vit
include/transformer/: vision_transformer.h
include/utils/: file_io.h
src/transformer/: vision_transformer.cpp
src/utils/: file_io.cpp
test_code/: 01_mnist_example.cpp  02_test_attention.cpp  03_test_mlp.cpp  04_test_transformer_block.cpp  05_test_vit.cpp
